# gerador-playbooks

./: .env  .env.example  ARCHITECTURE.md  LECTOR_BRAND.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SKILLS_INTEGRATION.md  batch_convert.py  batch_convert_v2.py  generate_demo.py  inline_converter.py  pyproject.toml  requirements.txt  run.py  simple_converter.py  test_system.py  visual_converter.py
src/: __init__.py  agents_enhanced.py  config.py  main.py  skills_integration.py  tasks.py
src/agents/: __init__.py  designer_agent.py  extractor_agent.py  reviewer_agent.py  rewriter_agent.py
src/tools/: __init__.py  docx_reader.py  docx_writer.py  html_writer.py  image_extractor.py
